Add destinetion folder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       env:
         REPO: git@github.com:JySa65/test_github_actions.git
         BRANCH: prod
-        FOLDER: build
+        FOLDER: .
         SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
         # KNOWN_HOSTS_FILE: resources/known_hosts # Path relative to the root of the repository
