--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: git@github.com:JySa65/test_github_actions.git
-        BRANCH: prod
+        BRANCH: gh-pages
         FOLDER: build
         SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
